--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "@syncfusion/ej2-angular-navigations": "^17.1.47",
+    "@syncfusion/ej2-navigations": "^17.1.47",
+    "@syncfusion/ej2-ng-navigations": "^16.2.50",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ngx-pagination": "^3.2.1",
+    "ngx-toastr": "^10.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
